--- a/src/app/components/overviews/sync-overview/sync-overview.component.scss
+++ b/src/app/components/overviews/sync-overview/sync-overview.component.scss
@@ -1,9 +1,155 @@
 .overview {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  width: 84%;
+    margin: 0 auto;
   
-    .sync-header {
+    h2 {
+      display: flex;
+      justify-content: center;
       padding-top: 20px;
     }
-}
+  
+    p {
+      font-size: 20px;
+      display: flex;
+      align-items: center;
+      gap: 5px;
+      text-wrap: nowrap;
+    }
+  
+    .info-card {
+      display: flex;
+      flex-direction: column;
+      align-items: baseline;
+      border-radius: 8px;
+      padding-block: 20px;
+  
+      h3 {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        margin-bottom: 10px;
+      }
+  
+      .info-card-content {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        width: 100%;
+        padding-block: 10px;
+        border-radius: 8px;
+  
+        .overview-content {
+          display: flex;
+          align-items: center;
+          flex-direction: column;
+          padding-inline: 10px;
+          gap: 10px;
+  
+          .remotes-bar {
+            width: 100%;
+            height: 4.5vh;
+            min-height: 38px;
+            border-radius: 18px;
+            position: relative;
+            overflow: hidden;
+            display: flex;
+  
+            .bar {
+              height: 100%;
+              transition: width 0.5s ease-in-out;
+  
+              &.mounted-bar {
+                background-color: var(--primary-color);
+              }
+  
+              &.unmounted-bar {
+                background-color: var(--purple);
+              }
+  
+              &.error-bar {
+                background-color: var(--warn-color);
+              }
+            }
+          }
+  
+          .legend {
+            display: flex;
+            gap: 15px;
+            margin-top: 10px;
+  
+            .legend-item {
+              display: flex;
+              align-items: center;
+              font-size: 14px;
+  
+              .color-box {
+                width: 20px;
+                height: 20px;
+                border-radius: 5px;
+                display: inline-block;
+                margin-right: 5px;
+              }
+            }
+  
+            .mounted {
+              background-color: var(--primary-color);
+            }
+  
+            .unmounted {
+              background-color: var(--purple);
+            }
+  
+            .error {
+              background-color: var(--warn-color);
+            }
+          }
+        }
+      }
+    }
+  
+    .remote-list {
+      display: flex;
+      overflow-x: auto;
+      gap: 10px;
+      padding: 10px;
+      border-radius: 16px;
+      background-color: #e6e3e3;
+  
+      .remote-card {
+          padding: 10px;
+          border-radius: 16px;
+          background: var(--secondary-background);
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          gap: 10px;
+      
+          &:hover {
+            background-color: var(--hover-color);
+          }
+        
+  
+        .remote-content {
+          display: flex;
+          flex-direction: row;
+          gap: 10px;
+          padding: 10px;
+
+  
+          h4 {
+            font-size: 20px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            max-width: 150px;
+            display: block;
+          }
+
+          p {
+            color: #8C8888;
+          }
+        }
+      }
+    }
+  }
+  
